feat: add user queues list with SSE
